// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChooserStep.vue Check if the Step.vue component has the expected UI if active 1`] = `
<div class="step-actions">
  <div class="field not-selected">
    <v-radio-stub value="no" nativevalue="yes" name="radio"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></v-radio-stub>
  </div>
  <div class="field selected">
    <v-radio-stub value="no" nativevalue="no" name="radio"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></v-radio-stub>
  </div>
</div>
`;

exports[`ChooserStep.vue Check if the Step.vue component has the expected UI if completed 1`] = `
<div class="step-actions">
  <div class="field not-selected">
    <v-radio-stub value="no" nativevalue="yes" name="radio"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></v-radio-stub>
  </div>
  <div class="field selected">
    <v-radio-stub value="no" nativevalue="no" name="radio"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></v-radio-stub>
  </div>
</div>
`;

exports[`ChooserStep.vue Check if the Step.vue component has the expected UI if disabled due is set 1`] = `
<div class="step-actions">
  <div class="field not-selected">
    <v-radio-stub value="no" nativevalue="yes" name="radio"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></v-radio-stub>
  </div>
  <div class="field selected">
    <v-radio-stub value="no" nativevalue="no" name="radio"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></v-radio-stub>
  </div>
</div>
`;

exports[`ChooserStep.vue Check if the Step.vue component has the expected UI if inactive 1`] = `
<div class="step-actions">
  <div class="field not-selected">
    <v-radio-stub value="no" nativevalue="yes" name="radio"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></v-radio-stub>
  </div>
  <div class="field selected">
    <v-radio-stub value="no" nativevalue="no" name="radio"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></v-radio-stub>
  </div>
</div>
`;

exports[`ChooserStep.vue Check if the Step.vue component has the expected UI if reversed 1`] = `
<div class="step-actions">
  <div class="field not-selected">
    <v-radio-stub value="yes" nativevalue="yes" name="radio"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></v-radio-stub>
  </div>
  <div class="field selected">
    <v-radio-stub value="yes" nativevalue="no" name="radio"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></v-radio-stub>
  </div>
</div>
`;

exports[`ChooserStep.vue Mark up is correctly rendered 1`] = `
<div
  class="step-actions"
>
  <div
    class="field not-selected"
  >
    <v-radio-stub
      name="radio"
      nativevalue="yes"
    >
      <span
        class="vocab-body body-normal"
      >
        stepper.yesstepper.undefined.selected
      </span>
    </v-radio-stub>
  </div>
   
  <div
    class="field selected"
  >
    <v-radio-stub
      name="radio"
      nativevalue="no"
    >
      <span
        class="vocab-body body-normal"
      >
        stepper.nostepper.undefined.not-selected
      </span>
    </v-radio-stub>
  </div>
</div>
`;
